--- a/app/src/main/res/layout/activity_send_money.xml
+++ b/app/src/main/res/layout/activity_send_money.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diegomalone.neontest.activity.WelcomeActivity">
+    tools:context="com.diegomalone.neontest.activity.SendMoneyActivity">
 
     <include layout="@layout/include_default_toolbar" />
 
-    <include layout="@layout/content_welcome" />
+    <include layout="@layout/content_send_money" />
 
 </android.support.design.widget.CoordinatorLayout>
