--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -8,13 +8,15 @@
     tools:context="com.diegomalone.neontest.activity.WelcomeActivity"
     tools:showIn="@layout/activity_welcome">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image_view"
         android:layout_width="@dimen/profile_image_size"
         android:layout_height="@dimen/profile_image_size"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="92dp"
         android:contentDescription="@string/content_description_profile_image"
         android:src="@drawable/profile"
+        app:civ_border_color="@color/colorAccent"
+        app:civ_border_width="2dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +25,10 @@
         android:id="@+id/name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="12dp"
+        android:textColor="@color/primaryText"
+        android:textSize="@dimen/text_highlight"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
@@ -33,8 +38,8 @@
         android:id="@+id/email_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:textColor="@color/primaryText"
+        android:textSize="@dimen/text_medium"
         app:layout_constraintBottom_toTopOf="@+id/send_money_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -44,20 +49,26 @@
 
     <Button
         android:id="@+id/send_money_button"
-        android:layout_width="184dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_button"
         android:text="@string/send_money_button"
+        android:textAllCaps="true"
+        android:textColor="@color/primaryText"
         app:layout_constraintBottom_toTopOf="@+id/historic_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/historic_button"
-        android:layout_width="179dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="54dp"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/shape_button"
         android:text="@string/historic_button"
+        android:textAllCaps="true"
+        android:textColor="@color/primaryText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
