--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <dimen name="profile_image_size">120dp</dimen>
 
     <dimen name="contact_image_size">60dp</dimen>
+
+    <dimen name="text_small">12sp</dimen>
+    <dimen name="text_medium">14sp</dimen>
+    <dimen name="text_highlight">16sp</dimen>
+    <dimen name="text_big">20sp</dimen>
 </resources>
