--- a/app/src/main/res/layout/activity_send_money.xml
+++ b/app/src/main/res/layout/activity_send_money.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diegomalone.neontest.activity.SendMoneyActivity"
-    android:background="@drawable/background_gradient">
+    android:background="@drawable/background_gradient"
+    android:orientation="vertical"
+    tools:context="com.diegomalone.neontest.activity.SendMoneyActivity">
+
+    <include layout="@layout/include_default_top_bar" />
 
     <include layout="@layout/content_send_money" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
