--- a/app/src/main/res/layout/content_send_money.xml
+++ b/app/src/main/res/layout/content_send_money.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.diegomalone.neontest.activity.SendMoneyActivity"
     tools:showIn="@layout/activity_send_money">
@@ -11,6 +12,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contact_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:paddingTop="16dp" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
