--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="90" android:endColor="@color/colorPrimaryDark" android:startColor="@color/colorPrimary" />
+            <gradient android:angle="90" android:endColor="@color/backgroundDark" android:startColor="@color/backgroundLight" />
         </shape>
     </item>
 </selector>
