--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="accentText">@color/colorAccent</color>
     <color name="primaryText">#FEFEFE</color>
     <color name="secondaryText">#102B3F</color>
+
+    <color name="backgroundDark">@color/colorPrimaryDark</color>
+    <color name="backgroundLight">#473970</color>
+    <color name="backgroundInput">@android:color/white</color>
 </resources>
