--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,13 @@
 
     <dimen name="contact_image_size">60dp</dimen>
 
+    <dimen name="round_border">30dp</dimen>
+    <dimen name="round_border_edit_text">16dp</dimen>
+
     <dimen name="text_small">11sp</dimen>
     <dimen name="text_default">13sp</dimen>
     <dimen name="text_medium">14sp</dimen>
     <dimen name="text_highlight">16sp</dimen>
     <dimen name="text_big">20sp</dimen>
+    <dimen name="text_huge">30sp</dimen>
 </resources>
