Creating custom loading and applying ripple effect on buttons

--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -52,7 +52,7 @@
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/shape_button"
+        android:background="@drawable/ripple_button"
         android:text="@string/send_money_button"
         android:textAllCaps="true"
         android:textColor="@color/primaryText"
@@ -65,7 +65,7 @@
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/shape_button"
+        android:background="@drawable/ripple_button"
         android:text="@string/historic_button"
         android:textAllCaps="true"
         android:textColor="@color/primaryText"
