--- a/app/src/main/res/layout/dialog_send_money.xml
+++ b/app/src/main/res/layout/dialog_send_money.xml
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/shape_button"
+            android:background="@drawable/ripple_button"
             android:text="@string/send_money_button_send"
             android:textAllCaps="true"
             android:layout_marginBottom="8dp"
