--- a/app/src/main/res/layout/content_historic.xml
+++ b/app/src/main/res/layout/content_historic.xml
@@ -16,4 +16,10 @@
         android:clipToPadding="false"
         android:paddingTop="16dp" />
 
+    <com.diegomalone.neontest.views.UltraLoading
+        android:id="@+id/loading"
+        android:layout_width="@dimen/loading_full"
+        android:layout_height="match_parent"
+        android:layout_gravity="center" />
+
 </LinearLayout>
