--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="text_highlight">16sp</dimen>
     <dimen name="text_big">20sp</dimen>
     <dimen name="text_huge">30sp</dimen>
+
+    <dimen name="loading_full">72dp</dimen>
 </resources>
