--- a/app/src/main/res/layout/dialog_send_money.xml
+++ b/app/src/main/res/layout/dialog_send_money.xml
@@ -32,7 +32,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/content_description_contact_image"
-            app:civ_border_color="@color/colorAccent"
+            app:civ_border_color="@color/colorPhotoBorder"
             app:civ_border_width="1dp"
             tools:src="@drawable/profile" />
 
