--- a/app/src/main/res/layout/view_contact.xml
+++ b/app/src/main/res/layout/view_contact.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/content_description_contact_image"
-        app:civ_border_color="@color/colorAccent"
+        app:civ_border_color="@color/colorPhotoBorder"
         app:civ_border_width="1dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
