--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="colorChartTop">@color/colorPrimary</color>
     <color name="colorChartBottom">@color/colorPhotoBorder</color>
 
-    <color name="loading_color">@android:color/white</color>
-    <color name="rippleColor">#D2A8FF</color>
+    <color name="colorLoading">@android:color/white</color>
+    <color name="colorRipple">#D2A8FF</color>
 </resources>
