--- a/app/src/main/res/layout/dialog_send_money.xml
+++ b/app/src/main/res/layout/dialog_send_money.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:background="@drawable/background_dialog"
     android:orientation="vertical">
 
@@ -72,7 +73,6 @@
             android:id="@+id/value_to_send_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="12dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/background_edit_text"
             android:gravity="center"
@@ -82,22 +82,51 @@
             android:textStyle="bold" />
 
         <RelativeLayout
+            android:id="@+id/error_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:visibility="gone"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/error_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="12dp"
+                app:srcCompat="@drawable/animation_you_cant" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_toRightOf="@id/error_icon"
+                android:gravity="center"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:text="@string/send_money_empty_value_error"
+                android:textColor="@color/primaryText" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp">
 
             <Button
                 android:id="@+id/send_money_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/ripple_button"
                 android:elevation="1dp"
                 android:text="@string/send_money_button_send"
                 android:textAllCaps="true"
-                android:layout_marginBottom="8dp"
                 android:textColor="@color/primaryText" />
 
-            <com.diegomalone.neontest.views.UltraLoading
+            <com.diegomalone.neontest.views.element.UltraLoading
                 android:id="@+id/loading"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
@@ -106,7 +135,7 @@
                 android:layout_centerHorizontal="true"
                 android:elevation="2dp"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
         </RelativeLayout>
 
     </LinearLayout>
