--- a/app/src/main/res/layout/dialog_send_money.xml
+++ b/app/src/main/res/layout/dialog_send_money.xml
@@ -26,15 +26,13 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.diegomalone.neontest.views.element.PhotoView
             android:id="@+id/contact_profile_view"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/content_description_contact_image"
-            app:civ_border_color="@color/colorPhotoBorder"
-            app:civ_border_width="1dp"
             tools:src="@drawable/profile" />
 
         <TextView
