--- a/app/src/main/res/layout/view_contact.xml
+++ b/app/src/main/res/layout/view_contact.xml
@@ -17,7 +17,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.diegomalone.neontest.views.element.PhotoView
         android:id="@+id/contact_profile_view"
         android:layout_width="56dp"
         android:layout_height="56dp"
@@ -25,8 +25,6 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/content_description_contact_image"
-        app:civ_border_color="@color/colorPhotoBorder"
-        app:civ_border_width="1dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         tools:src="@drawable/profile" />
