--- a/app/src/main/res/layout/view_total_transfer_chart_item.xml
+++ b/app/src/main/res/layout/view_total_transfer_chart_item.xml
@@ -41,14 +41,12 @@
 
     </LinearLayout>
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.diegomalone.neontest.views.element.PhotoView
         android:id="@+id/contact_profile_view"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/content_description_contact_image"
-        app:civ_border_color="@color/colorPhotoBorder"
-        app:civ_border_width="1dp"
         tools:src="@drawable/profile" />
 
 </LinearLayout>
