--- a/app/src/main/res/layout/view_photo.xml
+++ b/app/src/main/res/layout/view_photo.xml
@@ -9,9 +9,8 @@
         android:id="@+id/photo_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:civ_border_color="@android:color/transparent"
-        app:civ_border_width="2dp"
         android:layout_centerInParent="true"
+        app:civ_border_color="@android:color/transparent"
         tools:src="@drawable/profile" />
 
     <TextView
@@ -19,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textSize="@dimen/text_big"
-        android:textColor="@color/accentText"/>
+        android:textColor="@color/accentText"
+        android:textSize="@dimen/text_big" />
 
 </RelativeLayout>
